# Birdy-the-AI

./: .gitignore  CMakeLists.txt  README.MD
src/: config.h  main.cpp
src/ai/: BirdyAI.cpp  BirdyAI.h
src/core/: BackgroundThread.h  Controller.h  Exception.h  Time.h  Transition.h  exception.h
src/grid/: Grid.cpp  Grid.h  GridInterface.h  Tile.cpp  Tile.h
src/object/: Birdy.cpp  Birdy.h  Object.cpp  Object.h  ObjectInterface.h  Player.cpp  Player.h
src/scene/: Scene.cpp  Scene.h  SceneBuilder.cpp  SceneBuilder.h  SceneInterface.h
